dev-local/manifests/telefonistka-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: telefonistka-dev
  namespace: telefonistka-dev
  labels:
    app.kubernetes.io/name: telefonistka-dev
spec:
  containers:
  - name: telefonistka-dev
    image: telefonistka-dev-local:latest
    imagePullPolicy: IfNotPresent
    ports:
      - containerPort: 8080
